--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -52,35 +52,29 @@ Abbreviations
 
 Introduction
 ============
-Trauma, defined as the clinical entity composed of physical injury and the body's associated response [@Gerdin2015], is one of the leading causes of death worldwide and accounts for approximately 9% of global deaths annually [@globalburden]. The global health burden of trauma has led to it being described as a worldwide pandemic. One of the characteristics of this particular pandemic is its demographic spread; trauma is a leading cause of death for people aged 10-49 years [@globalburden] and 90% of trauma-related deaths occur in low- to middle-income countries [@whoepi]. Non-fatal outcomes also comprise a significant portion of the global health burden of disability [@globalburden], which can drastically reduce quality of life and health status in survivors of severe trauma [@globalburden; @longtermtrauma]. The quality of trauma care is therefore a globally relevant issue with significance for a great number of people. Improvements in trauma outcomes benefit not only the individual, but also society at large by reducing the societal and healthcare costs of disability. The significance of the consequences and burden of trauma has been recognised by the UN, who in their Sustainable Development Goals included the aim of reducing the number of global deaths and injuries from road traffic accidents by half by 2020 [@sdg]. The importance of improving trauma care named as one of the strategies in achieving this goal. The goal was not met by 2020 [@sdg20], which is yet another sign that there is significant progress to be made in trauma care. 
+Trauma, defined as the clinical entity composed of physical injury and the body's associated response [@Gerdin2015], is one of the leading causes of death worldwide and accounts for approximately 9% of global deaths annually [@globalburden]. The global health burden of trauma has led to it being described as a worldwide pandemic. One of the characteristics of this particular pandemic is its demographic spread; trauma is a leading cause of death for people aged 10-49 years [@globalburden] and 90% of trauma-related deaths occur in low- to middle-income countries [@whoepi]. Non-fatal outcomes also comprise a significant portion of the global health burden of disability [@globalburden], which can drastically reduce quality of life and health status in survivors of severe trauma [@globalburden; @longtermtrauma]. The quality of trauma care is therefore a globally relevant issue with significance for a great number of people. Improvements in trauma outcomes benefit both the individual and also society at large by reducing the societal and healthcare costs of disability. The significance of the consequences and burden of trauma has been recognised by the UN, who in their Sustainable Development Goals included the aim of reducing the number of global deaths and injuries from road traffic accidents by half by 2020 [@sdg]. The importance of improving trauma care named as one of the strategies in achieving this goal. The goal was not met by 2020 [@sdg20], which is another signal that there is significant progress to be made in trauma care. 
 
-Efforts to advance the state of trauma care have been ongoing for many years. Today many trauma centres have implemented quality improvement (QI) programs, and it has been shown in the US that these programs improve outcomes [@ustqi]. The most well-known example of a QI program is the Trauma Quality Improvement Program established by the American College of Surgeons in 2008 <!-- cite georg [@Hemmila2010-sr] -->. QI programs use many tools, including statistical analysis and audit filters [@hakkenbrakprevdeath], but the gold standard of trauma QI is the multidisciplinary morbidity and mortality (M&M) conference. These conferences review selected patient cases and establish whether there was opportunity for improvement (OFI) in each case. One method of improving the quality of M&M conferences is by improving case selection. This is usually achieved by using audit filters that automatically flag cases for review. One approach that is becoming more common is the use of trauma severity models as audit filters. Trauma severity models are algorithms that evaluate trauma severity in quantitative terms. The effectiveness of these models in case selection is understudied and their potential as audit filters is the focus of this paper. 
-
-<!-- georg mock2009
-earlier research focus on skill
-80s focus shifted
-2008 TQIP
--->
+Efforts to advance the state of trauma care have been ongoing for many years. Today many trauma centres have implemented quality improvement (QI) programs, and it has been shown in the US that these programs improve outcomes [@ustqi]. QI programs use many tools, including statistical analysis and audit filters [@hakkenbrakprevdeath], but the gold standard of trauma QI is the multidisciplinary morbidity and mortality (M&M) conference. These conferences review selected patient cases and establish whether there was opportunity for improvement (OFI) in each case. One method of improving the quality of M&M conferences is by improving case selection. This is usually achieved by using audit filters that automatically flag cases for review. One approach is the use of trauma severity models as audit filters. Trauma severity models are algorithms that evaluate trauma severity in quantitative terms. The effectiveness of these models in case selection is understudied and their potential as audit filters is the focus of this paper. 
 
 ## Morbidity and mortality conferences
 
-The significance of M&M conferences in trauma QI is a consequence of the unique challenges that trauma poses. Management of severe trauma is highly time-sensitive and is also dependent on the actions of a multidisciplinary chain of healthcare providers. Outcomes in severe trauma are dependent on the quality of care received [@ustqi] and errors in management are a common cause of preventable deaths [@prevdeathsghorbani; @prevdeathsmontmany; @prevdeathsteixeira]. Since mistakes by any one provider can lead to severe outcomes, attempts to improve trauma outcomes must seek to improve all aspects of the entire chain of care. The only way to achieve this is through peer review and this is why M&M conferences are the cornerstone of trauma QI programs. 
+The significance of M&M conferences in trauma QI is a consequence of the unique challenges inherent to trauma care. Management of severe trauma is highly time-sensitive and is also dependent on the actions of a chain of healthcare providers spanning multiple professions and disciplines. Outcomes in severe trauma are dependent on the quality of care received [@ustqi] and errors in management are a common cause of preventable deaths [@prevdeathsghorbani; @prevdeathsmontmany; @prevdeathsteixeira]. Since mistakes by any one provider can lead to severe outcomes, attempts to improve trauma outcomes must seek to improve all aspects of the entire chain of care. This can only be achieved through peer review and consequently, M&M conferences are the cornerstone of trauma QI programs. 
 
-As mentioned, M&M conferences review a selection of patient cases, attempt to establish whether there were opportunities for improvement (OFI) in each specific case, and, where necessary, implement corrective actions. The occurrence of OFI function in this manner as a proxy for incidence of suboptimal care. Regular conferences allow QI programs to identify patterns of errors and provide a basis for systemic quality improvement. For best results, conferences should be attended by all involved specialties and have a structured format. The WHO guidelines for trauma QI programs give specific recommendations as to the structure and format of M&M conferences [@whoguidelines]. Despite theserecommendations, there is a still a great degree of variation amongst clinics in how M&M conferences are carried out, with a significant number of clinics still using an informal and unstructured format [@tqipanglo]. The World Health Organisation (WHO) themselves note in their guidelines that M&M conferences are not used to their fullest potential globally [@whoguidelines]. 
+As mentioned, M&M conferences review a selection of patient cases, attempt to establish whether there were opportunities for improvement (OFI) in each specific case, and, where necessary, implement corrective actions. The occurrence of OFI function in this manner as a proxy for incidence of suboptimal care. Regular conferences allow QI programs to identify patterns of errors and provide a basis for systemic quality improvement. To maximise effectiveness, conferences should be attended by all involved specialities and have a structured format. The WHO guidelines for trauma QI programs give specific recommendations as to the structure and format of M&M conferences [@whoguidelines]. Despite theserecommendations, there is a still a great degree of variation amongst clinics in how M&M conferences are carried out, with a significant number of clinics still using an informal and unstructured format [@tqipanglo]. The World Health Organisation (WHO) themselves note in their guidelines that M&M conferences are not used to their fullest potential globally [@whoguidelines]. 
 
-The value of M&M conferences in long-term quality improvement is largely dependent on selection of appropriate cases for review. For example, imagine a conference where every case reviewed was found to have no OFI. In such a situation the value of the conference would effectively be zero, as nothing would be learned from it. In an ideal world, only cases that were actually mismanaged would be selected for review; this is, of course, an impossible ideal as it cannot be known whether a case was mismanaged prior to it being reviewed. This reliance on case selection is a weakness of M&M review and has led to considerable efforts to develop strategies to standardise case selection [@tqipanglo]. The WHO recommends that all "deaths, complications, adverse events and errors" should be reviewed [@whoguidelines]. Some clinics have made further advances in standardising case election; most commonly by using quality indicators, or audit filters, to flag cases for inclusion in M&M conferences [@tqipanglo; @developqi]. Examples of audit filters include time to first medical contact, adverse event rate, and, in some clinics, trauma severity models [@developqi; @whoguidelines]. 
+The value of M&M conferences in long-term quality improvement is largely dependent on selection of appropriate cases for review. For example, imagine a conference where every case reviewed was found to have no OFI. The value of that conference would effectively be zero, as it would fail to discover any flaws in trauma care. In an ideal world, only cases that were actually mismanaged would be selected for review; this is, of course, an impossible ideal as it cannot be known whether a case was mismanaged prior to it being reviewed. This reliance on case selection is a weakness of M&M review and has led to considerable efforts to develop strategies to standardise case selection [@tqipanglo]. The WHO recommends that all "deaths, complications, adverse events and errors" should be reviewed [@whoguidelines]. Some clinics have made further advances in standardising case election; most commonly by using quality indicators, or audit filters, to automatically flag cases for inclusion in M&M conferences [@tqipanglo; @developqi]. Examples of audit filters include time to first medical contact, adverse event rate, and, in some clinics, trauma severity models [@developqi; @whoguidelines]. 
 
-The benefit of standardising case selection is twofold; it could increase identification of the cases that are most likely to have been mismanaged, and it could also save resources in the form of work hours. The latter benefit is not insignificant considering the large caseload found in many urban trauma centres. The process of identifying cases is time-consuming and trauma centres that lack resources may not be able to allocate enough staff to case selection, which in turn lowers the effectiveness of M&M review. Despite the benefits of standardised case selection, several studies have shown that the process by which patient cases are selected for M&M review differs between clinics and case selection is often non-standardised [@mmreview; @tqipanglo]. <!-- in specific areas? is it worse in poor places? -->
+The benefit of standardising and automating case selection is twofold; it could increase identification of the cases that are most likely to have been mismanaged, and it could also save resources in the form of work hours. The latter benefit is not insignificant considering the large caseload found in many urban trauma centres. The process of identifying cases is time-consuming and trauma centres that lack resources may not be able to allocate enough staff to case selection, which in turn lowers the effectiveness of M&M review. Despite the benefits of standardised case selection, several studies have shown that the process by which patient cases are selected for M&M review differs between clinics and case selection is often non-standardised [@mmreview; @tqipanglo]. 
 
 ## Trauma severity models
-Trauma as a clinical entity is highly heterogeneous due to the variety in its underlying causes, which affect both the type and severity of the injury. One of several challenges posed by this heterogeneity is difficulty in expressing the severity of an injury in quantitative terms. For example, it would be difficult to intuitively say who was the more severely injured out of a patient with multiple gun shot wounds and a patient who was injured in a high speed road traffic accident. The ability to estimate trauma severity quantitatively is crucial for trauma QI programs as it allows trauma centres to assess outcomes and clinic performance. 
+Trauma as a clinical entity is highly heterogeneous due to the variety in its underlying causes, which affect both the type and severity of the injury. One of several challenges posed by this heterogeneity is difficulty in expressing the severity of an injury in quantitative terms. For example, it is difficult to intuitively say who was the more severely injured out of a patient with multiple gun shot wounds and a patient who was injured in a high speed road traffic accident. The ability to estimate trauma severity quantitatively is crucial for trauma QI programs as it allows trauma centres to assess outcomes and clinic performance. 
  
 Trauma severity models are algorithms that seek to address this need. These models translate anatomical and physiological parameters into a quantitive value that represents the totality of the injury to any given patient. Trauma severity models were initially intended for use in prehospital triage, and therefore were simplistic by design for ease of use [@traumareview], but over the years newer and more advanced algorithms have been developed to fulfil the needs of research, quality assurance, and clinical triage [@traumareview]. Today there are hundreds of trauma severity models that differ in methodology but have the common aim of expressing trauma severity as a numerical value that either directly or indirectly represents the probability of survival. 
 
 Trauma severity models have become a cornerstone of modern trauma QI programs [@historytss].
 These models allow clinics to compare their outcomes against an established benchmark. One example of their use is highlighting unexpectedly high mortality rates amongst patients with a high predicted probability of survival. [@whoguidelines]. They also provide a common language for expressing trauma severity, which enables clinics to compare their performance with other, comparable clinics [@whoguidelines].
 
-An inherent weakness of any trauma severity model is that estimates may be unreliable when applied to a population different from the one the model was developed from. This limitation in generalisability is a consequence of the heterogeneity of trauma, as the spectrum of traumatic injury varies across geographical regions [@assessingquality]. This weakness means that there is no single "best" model, as the performance of any model will be best in the population the model was sourced from. This is one reason why new models continue to be developed. Another reason is that efforts to establish which risk factors best predict mortality are still ongoing; different models use different physiological and anatomical parameters.  
+An inherent weakness of any trauma severity model is that estimates may be unreliable when applied to a population different from the one the model was developed from. This limitation in generalisability is a consequence of the heterogeneity of trauma, as the spectrum of traumatic injury varies across geographical regions [@assessingquality]. This weakness means that there is no single "best" model, as the performance of any model will be best in the population the model was sourced from. This is one reason why new models continue to be developed. Another reason is that efforts to establish which risk factors best predict mortality are still ongoing.
 
 The most commonly used model worldwide is The Trauma and Injury Severity Score (TRISS) [@trissbetter], first developed in the US in 1987 [@triss] and most recently updated in 2010 [@triss2010]. TRISS is a combination index that incorporates patient age, the Injury Severity Score (ISS), the Revised Trauma Score (RTS), and whether the injury was blunt or penetrating [@triss]. One weakness of TRISS is that the RTS requires GCS on arrival at hospital, which cannot be estimated in situations where the patient has already been intubated. This gives TRISS limited value in estimating probability of survival in certain populations [@trissbetter]. Another commonly used model is the Probability of Survival (PS) score, originally developed by the Trauma Audit & Research Network (TARN) in the UK in 2007 [@tarn07]. In some ways the PS model is more complex than TRISS; it has coefficients for sex associated with age, and provides a formula that takes into account the non-linearity of ISS [@tarn07]. 
 
